# PixelBot

./: .gitignore  README.md  install.sh
3d_parts/: README.md
3d_parts/step/: antena.step  arm.step  back_head.step  bottom_plate.step  enclosure.step  enclosure_top.step  front_head.step  leg.step  servo_holder.step  speaker_holder.step
3d_parts/stl/: back_head.stl  bottom_plate.stl  servo_holder.stl
elec/: README.md  wiring_diagram.fzz
electronic/: Gerber_pixel_bot_pi_hat_V1_0  README.md  wiring_diagram.fzz
pdf/: Editable_refined_participatory_design_kit_english_version.pptx  Editable_refined_participatory_design_kit_french_version.pptx  README.md
src/: README.md  camera_test.py  install.sh  main.py  stepper.py  stepper_test.py  test_motor_seq_and_display.py  test_speech_recognition.py  tts_test.py
src/pixelbot_audio/: README.md  package.xml  (+2 more)
src/pixelbot_interaction/: README.md  package.xml  setup.cfg  setup.py
src/pixelbot_interaction/launch/: pixelbot_interaction.launch.py
src/pixelbot_interaction/pixelbot_interaction/: pixelbot_interaction_node.py
src/pixelbot_interaction/story/: story_script.txt
src/pixelbot_motors/: README.md  package.xml  setup.cfg  setup.py
src/pixelbot_motors/pixelbot_motors/: pixelbot_motors_node.py
stl/: README.md  antenna.stl  arm.stl  base_plate.stl  bevel_gear.stl  bevel_gear2.stl  enclosure.stl  enclosure_top.stl  front_head.stl  leg.stl  pan_base_gear.stl  pan_pinion.stl  payload_plate.stl  screen_support.stl  speaker_holder.stl  support_arm.stl  tilt_arm.stl  tilt_base_gear.stl  tilt_pinion.stl  turret.stl
(+35 files in other folders)
